fix spacing

--- a/app/eventyay/static/eventyay-common/scss/custom.scss
+++ b/app/eventyay/static/eventyay-common/scss/custom.scss
@@ -19,7 +19,6 @@
         align-items: center;
         text-align: center;
         font-weight: 200;
-        margin-bottom: 20px;
         .navigation-button {
             margin-left: auto;
         }
